add some styling to servlet

--- a/webapp-servlet/src/main/webapp/show.html
+++ b/webapp-servlet/src/main/webapp/show.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8">
     <script src="show.js" defer></script>
+    <link rel="stylesheet" href="show.css">
     <title>ECM Sandbox</title>
 </head>
     <body>
-        <div>
+        <div class="panel">
             <input type="button" id="refreshButton" value="Refresh">
             <input type="button" id="createFolderButton" value="Create folder">
             <input type="button" id="createDocumentButton" value="Create document">
